[gd_scene load_steps=12 format=3 uid="uid://yeao2b75g5od"]

[ext_resource type="Script" path="res://Entities/Scripts/enemy_1.gd" id="1_2xxqf"]
[ext_resource type="Texture2D" uid="uid://b18yux8vk4vt7" path="res://Sprites/enemy_rpg.png" id="1_duwox"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q3emc"]

[sub_resource type="Animation" id="Animation_1j2yt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_j781k"]
resource_name = "move-down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_wr0kp"]
resource_name = "move-left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_gujxg"]
resource_name = "move-right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_38gxf"]
resource_name = "move-up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4qbla"]
_data = {
"RESET": SubResource("Animation_1j2yt"),
"move-down": SubResource("Animation_j781k"),
"move-left": SubResource("Animation_wr0kp"),
"move-right": SubResource("Animation_gujxg"),
"move-up": SubResource("Animation_38gxf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_08ogr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2fgy"]
size = Vector2(46, 46)

[node name="enemy_1" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 32
collision_mask = 8
script = ExtResource("1_2xxqf")

[node name="enemy_sprite" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("1_duwox")
hframes = 5
vframes = 4
frame = 1

[node name="enemy_collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q3emc")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4qbla")
}

[node name="hitbox" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 32
collision_mask = 3

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_08ogr")
debug_color = Color(0.911762, 0.241235, 0.437892, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="chase_box" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="chase_box"]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_t2fgy")
debug_color = Color(0.172558, 0.632665, 0.34599, 0.42)

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="chase_box" to="." method="_on_chase_box_area_entered"]
